navbar no longer fixed on mobile as hard to input on forms that way

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -764,7 +764,7 @@ box-shadow: inset 0 0 10px black;
         /* border-bottom: 1px darkgrey;
         
         border-style: solid; */
-        position: fixed; /* Set the navbar to fixed position */
+        
         top: 0; 
         gap: 20px;
         
